Update view amd minor fix.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=12345
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
-spring.freemarker.template-loader-path=classpath:/templates
-spring.freemarker.suffix=.ftl
-
 spring.freemarker.expose-request-attributes=true
+
+upload.path=D:/Program/Work time/SleeplessLife/src/FileStorage
+
