Доработана страница изменения данных и прочий рефакторинг

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=D:/Program/Work time/SleeplessLife/src/FileStorage
+upload.path=C:/Project/SleeplessLife/src/main/resources/fileStorage/img
+
+debug=true
 
